--- a/thanks.html
+++ b/thanks.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="lowerpage">
+<body class="lowerpage thankspage">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="index.html"><img src="images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a></h1>
             <nav class="pc_nav">
@@ -55,16 +55,18 @@
         </div>
     </header>
 
-    <div class="thankyou">
-        <div class="thankyou_pic"><img src="images/thanks_bird@2x.png" alt="手紙を受け取るオナガ"></div>
-        <p>
-            お問い合わせありがとうございました。<br>
-            3営業日以内にご返信いたします。<br>
-            今しばらくお待ちください。
-        </p>
-    </div>
+    <main id="main" class="fade">
+        <div class="thankyou">
+            <div class="thankyou_pic"><img src="images/thanks_bird@2x.png" alt="手紙を受け取るオナガ"></div>
+            <p>
+                お問い合わせありがとうございました。<br>
+                3営業日以内にご返信いたします。<br>
+                今しばらくお待ちください。
+            </p>
+        </div>
+    </main>
 
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="index.html"><img src="images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a></div>
         <ul>
             <li><a href="index.html#concept">はじめに</a></li>
