--- a/works_graphicdesign/index.html
+++ b/works_graphicdesign/index.html
@@ -20,7 +20,7 @@
 
 <body class="lowerpage list_web">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -60,68 +60,70 @@
         </div>
     </header>
 
-    <section class="graphic_list">
-        <div class="list_wrap">
-            <div class="list_title">
-                <h2>グラフィック<br>　　　デザイン</h2>
-                <div class="pic_hand"><img src="images/list_graphic_top.svg" alt="冊子を開く手"></div>
+    <main id="main" class="fade">
+        <section class="graphic_list">
+            <div class="list_wrap">
+                <div class="list_title">
+                    <h2>グラフィック<br>　　　デザイン</h2>
+                    <div class="pic_hand"><img src="images/list_graphic_top.svg" alt="冊子を開く手"></div>
+                </div>
+                <div class="list_text">
+                    <p>
+                        チラシやパンフレット、名刺、ロゴなどを制作しています。<br>
+                        お客様の世界観やイメージをデザインに落とし込み、課題を解決できるものをお作りします。
+                    </p>
+                    <ul>
+                        <li><a href="#print">チラシ・パンフレット・名刺</a></li>
+                        <li><a href="#logo">ロゴ・アイコン</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="list_text">
-                <p>
-                    チラシやパンフレット、名刺、ロゴなどを制作しています。<br>
-                    お客様の世界観やイメージをデザインに落とし込み、課題を解決できるものをお作りします。
-                </p>
-                <ul>
-                    <li><a href="#print">チラシ・パンフレット・名刺</a></li>
-                    <li><a href="#logo">ロゴ・アイコン</a></li>
-                </ul>
-            </div>
-        </div>
-        <section id="print" class="list_content">
-            <h3>チラシ・パンフレット・名刺</h3>
-            <div class="list_slider">
-                <a href="print_04.html" class="list_slider_img">
-                    <img src="images/list_print_04@2x-80.jpg" alt="カフェブランドブック">
-                    <h4>つむぐ。デザイン名刺</h4>
-                </a>
-                <a href="print_01.html" class="list_slider_img">
-                    <img src="images/list_print_01@2x-80.jpg" alt="カフェブランドブック">
-                    <h4>カフェ<br>ブランドブック</h4>
-                </a>
-                <a href="print_05.html" class="list_slider_img">
-                    <img src="images/list_print_05@2x-80.jpg" alt="カフェブランドブック">
-                    <h4>焼き鳥屋<br>オープン告知チラシ</h4>
-                </a>
-                <a href="print_06.html" class="list_slider_img">
-                    <img src="images/list_print_06@2x-80.jpg" alt="トラックの日ポスター">
-                    <h4>「トラックの日」ポスター</h4>
-                </a>
-                <a href="print_02.html" class="list_slider_img">
-                    <img src="images/list_print_02@2x-80.jpg" alt="紹介パンフレット">
-                    <h4>整骨院<br>紹介パンフレット</h4>
-                </a>
-                <a href="print_03.html" class="list_slider_img">
-                    <img src="images/list_print_03@2x-80.jpg" alt="見学会告知チラシ">
-                    <h4>住宅見学会<br>告知チラシ</h4>
-                </a>
-            </div>
+            <section id="print" class="list_content">
+                <h3>チラシ・パンフレット・名刺</h3>
+                <div class="list_slider">
+                    <a href="print_04.html" class="list_slider_img">
+                        <img src="images/list_print_04@2x-80.jpg" alt="カフェブランドブック">
+                        <h4>つむぐ。デザイン名刺</h4>
+                    </a>
+                    <a href="print_01.html" class="list_slider_img">
+                        <img src="images/list_print_01@2x-80.jpg" alt="カフェブランドブック">
+                        <h4>カフェ<br>ブランドブック</h4>
+                    </a>
+                    <a href="print_05.html" class="list_slider_img">
+                        <img src="images/list_print_05@2x-80.jpg" alt="カフェブランドブック">
+                        <h4>焼き鳥屋<br>オープン告知チラシ</h4>
+                    </a>
+                    <a href="print_06.html" class="list_slider_img">
+                        <img src="images/list_print_06@2x-80.jpg" alt="トラックの日ポスター">
+                        <h4>「トラックの日」ポスター</h4>
+                    </a>
+                    <a href="print_02.html" class="list_slider_img">
+                        <img src="images/list_print_02@2x-80.jpg" alt="紹介パンフレット">
+                        <h4>整骨院<br>紹介パンフレット</h4>
+                    </a>
+                    <a href="print_03.html" class="list_slider_img">
+                        <img src="images/list_print_03@2x-80.jpg" alt="見学会告知チラシ">
+                        <h4>住宅見学会<br>告知チラシ</h4>
+                    </a>
+                </div>
+            </section>
+            <section id="logo" class="list_content">
+                <h3>ロゴ・アイコン</h3>
+                <div class="list_slider">
+                    <a href="logo_01.html" class="list_slider_img">
+                        <img src="images/list_logo_01@2x-80.jpg" alt="つむぐ。デザインロゴ">
+                        <h4>つむぐ。デザインロゴ</h4>
+                    </a>
+                    <a href="logo_02.html" class="list_slider_img">
+                        <img src="images/list_logo_02@2x-80.jpg" alt="当サイト アイコン">
+                        <h4>当サイト<br>アイコン素材4点</h4>
+                    </a>
+                </div>
+            </section>
         </section>
-        <section id="logo" class="list_content">
-            <h3>ロゴ・アイコン</h3>
-            <div class="list_slider">
-                <a href="logo_01.html" class="list_slider_img">
-                    <img src="images/list_logo_01@2x-80.jpg" alt="つむぐ。デザインロゴ">
-                    <h4>つむぐ。デザインロゴ</h4>
-                </a>
-                <a href="logo_02.html" class="list_slider_img">
-                    <img src="images/list_logo_02@2x-80.jpg" alt="当サイト アイコン">
-                    <h4>当サイト<br>アイコン素材4点</h4>
-                </a>
-            </div>
-        </section>
-    </section>
+    </main>
 
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
