--- a/works_illustration/color_01.html
+++ b/works_illustration/color_01.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage color_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,39 +57,40 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/color01_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>当サイト メインビジュアル</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>デジタルカラーイラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜着彩</dd>
-                    <dt>制作期間</dt>
-                    <dd>4日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/color01_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>当サイト メインビジュアル</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>デジタルカラーイラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜着彩</dd>
+                        <dt>制作期間</dt>
+                        <dd>4日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Procreate</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Procreate</dd>
+                    </dl>
+                    <p>
+                        当サイトPC版・スマホ版のメインビジュアルを作成しました。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    当サイトPC版・スマホ版のメインビジュアルを作成しました。
+                    当サイトのアクセントカラーである碧色をベースに、さわやかな雰囲気のビジュアルにしました。<br>
+                    お客様の背景や想いを「連なる物語」として原稿用紙をモチーフに選び、それらを手に取って集めながら「一つのデザインにまとめる＝つむぐ」情景をイラストにしました。原稿用紙がはためいている影や木々で、イラストに奥行きを感じられるように工夫しました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                当サイトのアクセントカラーである碧色をベースに、さわやかな雰囲気のビジュアルにしました。<br>
-                お客様の背景や想いを「連なる物語」として原稿用紙をモチーフに選び、それらを手に取って集めながら「一つのデザインにまとめる＝つむぐ」情景をイラストにしました。原稿用紙がはためいている影や木々で、イラストに奥行きを感じられるように工夫しました。
-            </p>
-            <div class="color_detail_img_wrap">
-                <div class="detail_img_pc"><img src="images/color01_pc@2x-80.jpg" alt="ブランドブック01"></div>
-                <div class="detail_img_sp"><img src="images/color01_sp@2x-80.jpg" alt="ブランドブック02"></div>
-            </div>
-        </section>
-    </article>
-
+                <div class="color_detail_img_wrap">
+                    <div class="detail_img_pc"><img src="images/color01_pc@2x-80.jpg" alt="ブランドブック01"></div>
+                    <div class="detail_img_sp"><img src="images/color01_sp@2x-80.jpg" alt="ブランドブック02"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
     <footer class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
@@ -110,7 +111,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#color">一覧に<br>もどる</a>
         </div>
     </footer>
 
