--- a/works_illustration/color_03.html
+++ b/works_illustration/color_03.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage color_detail_03">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,39 +57,40 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/color03_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>I.Y様 アイコンイラスト</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>デジタルカラーイラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜着彩</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/color03_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>I.Y様 アイコンイラスト</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>デジタルカラーイラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜着彩</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Procreate</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Procreate</dd>
+                    </dl>
+                    <p>
+                        インスタグラムアカウント用のアイコンイラストを作成しました。<br>
+                        水色系で、お子様をモデルとしたイラスト制作のご依頼です。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    インスタグラムアカウント用のアイコンイラストを作成しました。<br>
-                    水色系で、お子様をモデルとしたイラスト制作のご依頼です。
+                    淡い水色で人物のカラーをまとめ、苺の赤色をアクセントにしました。<br>
+                    笑顔や輪郭の丸みなどいきいきとした可愛らしさを意識し、背景としてお子様がお気に入りのブランケットを配置しました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                淡い水色で人物のカラーをまとめ、苺の赤色をアクセントにしました。<br>
-                笑顔や輪郭の丸みなどいきいきとした可愛らしさを意識し、背景としてお子様がお気に入りのブランケットを配置しました。
-            </p>
-            <div class="detail_img_square"><img src="images/color03@2x-80.jpg" alt="アイコンイラスト"></div>
-        </section>
-    </article>
+                <div class="detail_img_square"><img src="images/color03@2x-80.jpg" alt="アイコンイラスト"></div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -108,7 +109,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#color">一覧に<br>もどる</a>
         </div>
     </footer>
 
