--- a/works_illustration/color_04.html
+++ b/works_illustration/color_04.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage color_detail_04">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,42 +57,43 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/color04_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>K.N様 アイコンイラスト</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>デジタルカラーイラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜着彩</dd>
-                    <dt>制作期間</dt>
-                    <dd>10日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/color04_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>K.N様 アイコンイラスト</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>デジタルカラーイラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜着彩</dd>
+                        <dt>制作期間</dt>
+                        <dd>10日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Procreate</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Procreate</dd>
+                    </dl>
+                    <p>
+                        SNSアカウント用のアイコンイラストを作成しました。<br>
+                        にこやかな表情・ボブヘアーの女の子、青系のイラスト制作のご依頼です。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    SNSアカウント用のアイコンイラストを作成しました。<br>
-                    にこやかな表情・ボブヘアーの女の子、青系のイラスト制作のご依頼です。
+                    青をメインカラー、差し色にイエローを選びました。<br>
+                    棒立ち感がでないように手や髪で画面に動きを加え、表情作りを意識しました。また、グラデーションや光の表現を細かく書き込み、明るい印象になるようにしました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                青をメインカラー、差し色にイエローを選びました。<br>
-                棒立ち感がでないように手や髪で画面に動きを加え、表情作りを意識しました。また、グラデーションや光の表現を細かく書き込み、明るい印象になるようにしました。
-            </p>
-            <div class="color_detail_img_wrap">
-                <div class="detail_img_01"><img src="images/color04_01@2x-80.jpg" alt="アイコンイラスト01"></div>
-                <div class="detail_img_02"><img src="images/color04_02@2x-80.jpg" alt="アイコンイラスト02"></div>
-            </div>
-        </section>
-    </article>
+                <div class="color_detail_img_wrap">
+                    <div class="detail_img_01"><img src="images/color04_01@2x-80.jpg" alt="アイコンイラスト01"></div>
+                    <div class="detail_img_02"><img src="images/color04_02@2x-80.jpg" alt="アイコンイラスト02"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -111,7 +112,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#color">一覧に<br>もどる</a>
         </div>
     </footer>
 
