--- a/works_illustration/water_02.html
+++ b/works_illustration/water_02.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage water_detail_02">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,36 +57,37 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/water02@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>Good night</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>水彩イラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜着彩</dd>
-                    <dt>制作期間</dt>
-                    <dd>1日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/water02@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>Good night</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>水彩イラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜着彩</dd>
+                        <dt>制作期間</dt>
+                        <dd>1日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>透明水彩絵の具</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>透明水彩絵の具</dd>
+                    </dl>
+                    <p>
+                        寝室に飾る絵が欲しいという友人のリクエストに応えて制作したイラストです。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    寝室に飾る絵が欲しいという友人のリクエストに応えて制作したイラストです。
+                    安らぎを感じるような雰囲気の絵を目指しました。夢の中で、ふわふわと浮かぶ月にもたれて眠る女の子を描きました。寝室に飾るということで、落ち着いた色合いでまとめています。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                安らぎを感じるような雰囲気の絵を目指しました。夢の中で、ふわふわと浮かぶ月にもたれて眠る女の子を描きました。寝室に飾るということで、落ち着いた色合いでまとめています。
-            </p>
-        </section>
-    </article>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -105,7 +106,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#watercolor">一覧に<br>もどる</a>
         </div>
     </footer>
 
