--- a/works_webdesign/banner_01.html
+++ b/works_webdesign/banner_01.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage banner_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,53 +57,54 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/banner01_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>バーガーショップ 新商品広告</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>バナー広告</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン</dd>
-                    <dt>制作期間</dt>
-                    <dd>4日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/banner01_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>バーガーショップ 新商品広告</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>バナー広告</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン</dd>
+                        <dt>制作期間</dt>
+                        <dd>4日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator<br>Photoshop</dd>
-                </dl>
-                <p>
-                    新商品告知のためのバナー広告をデザインしました（架空案件）。<br>
-                    2パターンのデザイン案件で（①高級・②POP）、上の2つが採用されました。
+                        <dt>ツール</dt>
+                        <dd>Illustrator<br>Photoshop</dd>
+                    </dl>
+                    <p>
+                        新商品告知のためのバナー広告をデザインしました（架空案件）。<br>
+                        2パターンのデザイン案件で（①高級・②POP）、上の2つが採用されました。
+                    </p>
+                </div>
+                <h3>制作のポイント①</h3>
+                <p class="text_point">
+                    ブラウンとブラックのグラデーションを背景に、ゴールドをアクセントカラーとして用いました。<br>
+                    より高級感や商品へのこだわりが伝わるように、商品写真は正面からスポットライトが当たっているようにPhotoshopで加工し、背景にシェフの写真を配置しました。
                 </p>
-            </div>
-            <h3>制作のポイント①</h3>
-            <p class="text_point">
-                ブラウンとブラックのグラデーションを背景に、ゴールドをアクセントカラーとして用いました。<br>
-                より高級感や商品へのこだわりが伝わるように、商品写真は正面からスポットライトが当たっているようにPhotoshopで加工し、背景にシェフの写真を配置しました。
-            </p>
-            <div class="detail_img_wrap_01">
-                <div class="detail_img_01"><img src="images/banner01_01@2x-80.jpg" alt="高級版01"></div>
-                <div class="detail_img_01"><img src="images/banner01_02@2x-80.jpg" alt="高級版02"></div>
-            </div>
-            <h3>制作のポイント②</h3>
-            <p class="text_point">
-                赤や黄色などのビビットな暖色を中心に配色しました。<br>
-                かわいらしいPOP、派手で弾けるようなPOPの2つの方向性を決め、装飾や文字のレイアウトやフォントの種類で表現しました。
-            </p>
-            <div class="detail_img_wrap_02">
-                <div class="detail_img_02"><img src="images/banner01_03@2x-80.jpg" alt="POP版01"></div>
-                <div class="detail_img_02"><img src="images/banner01_04@2x-80.jpg" alt="POP版02"></div>
-                <div class="detail_img_02"><img src="images/banner01_05@2x-80.jpg" alt="POP版03"></div>
-                <div class="detail_img_02"><img src="images/banner01_06@2x-80.jpg" alt="POP版04"></div>
-            </div>
-        </section>
-    </article>
+                <div class="detail_img_wrap_01">
+                    <div class="detail_img_01"><img src="images/banner01_01@2x-80.jpg" alt="高級版01"></div>
+                    <div class="detail_img_01"><img src="images/banner01_02@2x-80.jpg" alt="高級版02"></div>
+                </div>
+                <h3>制作のポイント②</h3>
+                <p class="text_point">
+                    赤や黄色などのビビットな暖色を中心に配色しました。<br>
+                    かわいらしいPOP、派手で弾けるようなPOPの2つの方向性を決め、装飾や文字のレイアウトやフォントの種類で表現しました。
+                </p>
+                <div class="detail_img_wrap_02">
+                    <div class="detail_img_02"><img src="images/banner01_03@2x-80.jpg" alt="POP版01"></div>
+                    <div class="detail_img_02"><img src="images/banner01_04@2x-80.jpg" alt="POP版02"></div>
+                    <div class="detail_img_02"><img src="images/banner01_05@2x-80.jpg" alt="POP版03"></div>
+                    <div class="detail_img_02"><img src="images/banner01_06@2x-80.jpg" alt="POP版04"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -122,7 +123,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#banner">一覧に<br>もどる</a>
         </div>
     </footer>
 
