--- a/works_webdesign/web_01.html
+++ b/works_webdesign/web_01.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage website_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,43 +57,44 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/web02_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>ポートフォリオサイト</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>ポートフォリオ</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン・イラスト<br>ライティング・コーディング</dd>
-                    <dt>制作期間</dt>
-                    <dd>2ヶ月</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/web01_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>ポートフォリオサイト</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>ポートフォリオ</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン・イラスト<br>ライティング・コーディング</dd>
+                        <dt>制作期間</dt>
+                        <dd>2ヶ月</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator<br>Procreate<br>HTML・CSS・jQuery</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator<br>Procreate<br>HTML・CSS・jQuery</dd>
+                    </dl>
+                    <p>
+                        自身のポートフォリオサイトです。<br>
+                        見る人がまず何を知りたいかを考えて、コンテンツや順番を決定しました。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    自身のポートフォリオサイトです。<br>
-                    見る人がまず何を知りたいかを考えて、コンテンツや順番を決定しました。
+                    白とベージュを基調に、アクセントカラーとして碧色を使い、「物語」を連想するデザインにまとめました。
+                    縦書きのレイアウトを入れて動きをつけ、物語を読むときのゆったりとした空気感を表現するため、余白を広く取ることを意識しました。<br>
+                    コーディングではデザインカンプの再現だけでなく、CSSのアニメーションやjQueryで動きをつけることで、単調さをなくし、UIもよくなるよう工夫しました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                白とベージュを基調に、アクセントカラーとして碧色を使い、「物語」を連想するデザインにまとめました。<br>
-                縦書きのレイアウトを入れて動きをつけ、物語を読むときのゆったりとした空気感を表現するため、余白を広く取ることを意識しました。<br>
-                コーディングは・・・テキスト・・・
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img_pc"></div>
-                <div class="detail_img_sp"></div>
-            </div>
-        </section>
-    </article>
+                <div class="detail_img_wrap">
+                    <div class="detail_img_pc"></div>
+                    <div class="detail_img_sp"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -112,7 +113,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#website">一覧に<br>もどる</a>
         </div>
     </footer>
 
