--- a/works_webdesign/web_02.html
+++ b/works_webdesign/web_02.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage works_detail_02">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,39 +57,40 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/web02_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>美容室ランディングページ</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>ランディングページ</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン</dd>
-                    <dt>制作期間</dt>
-                    <dd>1週間</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/web02_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>美容室ランディングページ</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>ランディングページ</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン</dd>
+                        <dt>制作期間</dt>
+                        <dd>1週間</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator</dd>
+                    </dl>
+                    <p>
+                        美容室のWebサイトをデザインしました（架空案件）。<br>認知向上・予約向上を目的としています。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    美容室のWebサイトをデザインしました（架空案件）。<br>認知向上・予約向上を目的としています。
+                    白を基調に、コーポレートカラーのピンクを取り入れ、女性らしさ・清潔感のあるデザインにまとめました。<br>
+                    モチーフには、花のイラストやロゴに使われている図形を取り入れています。<br>
+                    また、ヘッダーのRESERVEボタンやSNSリンクのデザインを強調することで、お客様の行動につながるよう工夫しました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                白を基調に、コーポレートカラーのピンクを取り入れ、女性らしさ・清潔感のあるデザインにまとめました。<br>
-                モチーフには、花のイラストやロゴに使われている図形を取り入れています。<br>
-                また、ヘッダーのRESERVEボタンやSNSリンクのデザインを強調することで、お客様の行動につながるよう工夫しました。
-            </p>
-            <div class="detail_img"><img src="images/web02_cap@2x-80.jpg" alt="美容室Webサイト"></div>
-        </section>
-    </article>
+                <div class="detail_img"><img src="images/web02_cap@2x-80.jpg" alt="美容室Webサイト"></div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -108,7 +109,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#website">一覧に<br>もどる</a>
         </div>
     </footer>
 
