--- a/works_graphicdesign/logo_01.html
+++ b/works_graphicdesign/logo_01.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage logo_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,51 +57,52 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/logo01_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>つむぐ。デザイン ロゴ</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>ロゴマーク</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン</dd>
-                    <dt>制作期間</dt>
-                    <dd>3日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/logo01_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>つむぐ。デザイン ロゴ</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>ロゴマーク</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン</dd>
+                        <dt>制作期間</dt>
+                        <dd>3日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator</dd>
-                </dl>
-                <p>
-                    「つむぐ。デザイン」のロゴマークをデザインしました。採用したロゴマークと別案の2つも含めて紹介します。
+                        <dt>ツール</dt>
+                        <dd>Illustrator</dd>
+                    </dl>
+                    <p>
+                        「つむぐ。デザイン」のロゴマークをデザインしました。採用したロゴマークと別案の2つも含めて紹介します。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
+                <p class="point_text">
+                    コンセプトのキーワードである「物語」から、モチーフとして糸車と鳥を選びました。<br>
+                    童話や昔話に登場する鳥たちは、人々の世界を広げたり、教訓などの気づきを与える存在として描かれています。お客様の想いをひとつの物語としてつむいだデザインが、新しい気づきや発見に繋がるものにしたいという想いを込めました。<br>
+                    出身地である福井県の豊かな自然を表現する碧色（へきしょく）とベージュをシンボルマークのカラーとして使い、ナチュラルな雰囲気に仕上げました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p class="point_text">
-                コンセプトのキーワードである「物語」から、モチーフとして糸車と鳥を選びました。<br>
-                童話や昔話に登場する鳥たちは、人々の世界を広げたり、教訓などの気づきを与える存在として描かれています。お客様の想いをひとつの物語としてつむいだデザインが、新しい気づきや発見に繋がるものにしたいという想いを込めました。<br>
-                出身地である福井県の豊かな自然を表現する碧色（へきしょく）とベージュをシンボルマークのカラーとして使い、ナチュラルな雰囲気に仕上げました。
-            </p>
-            <h3>別案</h3>
-            <p class="point_text">
-                別案1：<br>
-                お客様の想いを丁寧につむいで、一つの物語（デザイン）をつくる過程を、上から折り重なっていく糸と本で表現し、シンプルで洗練された印象にまとめました。<br>
-                <br>
-                別案2：<br>
-                モチーフには、お客様の物語を表す本を選び、モチーフのデザインを「つむぐ」の各頭文字である「T」、「M」、「G」で組み立てることで、サイトのコンセプトを表現しました。
+                <h3>別案</h3>
+                <p class="point_text">
+                    別案1：<br>
+                    お客様の想いを丁寧につむいで、一つの物語（デザイン）をつくる過程を、上から折り重なっていく糸と本で表現し、シンプルで洗練された印象にまとめました。<br>
+                    <br>
+                    別案2：<br>
+                    モチーフには、お客様の物語を表す本を選び、モチーフのデザインを「つむぐ」の各頭文字である「T」、「M」、「G」で組み立てることで、サイトのコンセプトを表現しました。
 
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img_01"><img src="images/logo01_01@2x-80.jpg" alt="名刺縦表"></div>
-                <div class="detail_img_02"><img src="images/logo01_02@2x-80.jpg" alt="名刺縦裏"></div>
-            </div>
-        </section>
-    </article>
+                </p>
+                <div class="detail_img_wrap">
+                    <div class="detail_img_01"><img src="images/logo01_01@2x-80.jpg" alt="名刺縦表"></div>
+                    <div class="detail_img_02"><img src="images/logo01_02@2x-80.jpg" alt="名刺縦裏"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -120,7 +121,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#logo">一覧に<br>もどる</a>
         </div>
     </footer>
 
