--- a/works_graphicdesign/print_01.html
+++ b/works_graphicdesign/print_01.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage print_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,45 +57,46 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/print01_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>カフェ ブランドブック</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>8ページ小冊子</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン</dd>
-                    <dt>制作期間</dt>
-                    <dd>4日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/print01_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>カフェ ブランドブック</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>8ページ小冊子</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン</dd>
+                        <dt>制作期間</dt>
+                        <dd>4日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator<br>Photoshop</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator<br>Photoshop</dd>
+                    </dl>
+                    <p>
+                        スイーツカフェのブランドブックをデザインしました（架空案件）。<br>
+                        コンセプトやピックアップ商品などを紹介する小冊子です。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    スイーツカフェのブランドブックをデザインしました（架空案件）。<br>
-                    コンセプトやピックアップ商品などを紹介する小冊子です。
+                    チョコレートカラーをメインに、ゴールドをアクセントとして使いました。<br>
+                    少ないページ数でも単調にならないよう、レイアウトに変化をつけることを意識し、写真と文字の組み方を工夫しました。また、余白をゆったりととることで、スイーツカフェの高級感や洗練された雰囲気を表現しました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                チョコレートカラーをメインに、ゴールドをアクセントとして使いました。<br>
-                少ないページ数でも単調にならないよう、レイアウトに変化をつけることを意識し、写真と文字の組み方を工夫しました。また、余白をゆったりととることで、スイーツカフェの高級感や洗練された雰囲気を表現しました。
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img"><img src="images/print01_01@2x-80.jpg" alt="ブランドブック01"></div>
-                <div class="detail_img"><img src="images/print01_02@2x-80.jpg" alt="ブランドブック02"></div>
-                <div class="detail_img"><img src="images/print01_03@2x-80.jpg" alt="ブランドブック03"></div>
-                <div class="detail_img"><img src="images/print01_04@2x-80.jpg" alt="ブランドブック04"></div>
-                <div class="detail_img"><img src="images/print01_05@2x-80.jpg" alt="ブランドブック05"></div>
-            </div>
-        </section>
-    </article>
+                <div class="detail_img_wrap">
+                    <div class="detail_img"><img src="images/print01_01@2x-80.jpg" alt="ブランドブック01"></div>
+                    <div class="detail_img"><img src="images/print01_02@2x-80.jpg" alt="ブランドブック02"></div>
+                    <div class="detail_img"><img src="images/print01_03@2x-80.jpg" alt="ブランドブック03"></div>
+                    <div class="detail_img"><img src="images/print01_04@2x-80.jpg" alt="ブランドブック04"></div>
+                    <div class="detail_img"><img src="images/print01_05@2x-80.jpg" alt="ブランドブック05"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -114,7 +115,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#print">一覧に<br>もどる</a>
         </div>
     </footer>
 
