--- a/works_graphicdesign/print_02.html
+++ b/works_graphicdesign/print_02.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage print_detail_02">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,42 +57,43 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/print02_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>整骨院 紹介パンフレット</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>三つ折りパンフレット</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン（模写）</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/print02_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>整骨院 紹介パンフレット</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>三つ折りパンフレット</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン（模写）</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator<br>Photoshop</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator<br>Photoshop</dd>
+                    </dl>
+                    <p>
+                        整骨院のサービスを紹介するパンフレットを作成しました（架空案件）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    整骨院のサービスを紹介するパンフレットを作成しました（架空案件）。
+                    イエローや丸みのあるフォント、イラストを使って、親しみやすいデザインにしています。<br>
+                    施術やヒアリングの様子が伝わるよう写真を活用し、院長の写真はPhotoshopで切り抜いて配置しました。あしらいのデザインにバリエーションを持たせて情報を整理しています。
+
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                イエローや丸みのあるフォント、イラストを使って、親しみやすいデザインにしています。<br>
-                施術やヒアリングの様子が伝わるよう写真を活用し、院長の写真はPhotoshopで切り抜いて配置しました。あしらいのデザインにバリエーションを持たせて情報を整理しています。
+                <div class="detail_img_wrap">
+                    <div class="detail_img"><img src="images/print02_01@2x-80.jpg" alt="パンフレット表"></div>
+                    <div class="detail_img"><img src="images/print02_02@2x-80.jpg" alt="パンフレット裏"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img"><img src="images/print02_01@2x-80.jpg" alt="パンフレット表"></div>
-                <div class="detail_img"><img src="images/print02_02@2x-80.jpg" alt="パンフレット裏"></div>
-            </div>
-        </section>
-    </article>
-
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -111,7 +112,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#print">一覧に<br>もどる</a>
         </div>
     </footer>
 
