--- a/works_graphicdesign/print_03.html
+++ b/works_graphicdesign/print_03.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage print_detail_03">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,39 +57,40 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/print03_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>住宅見学会 告知チラシ</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>チラシ</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン（模写）</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/print03_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>住宅見学会 告知チラシ</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>チラシ</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン（模写）</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator<br>Photoshop</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator<br>Photoshop</dd>
+                    </dl>
+                    <p>
+                        新シリーズのモデルハウス見学会をお知らせするチラシを制作しました（架空案件）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    新シリーズのモデルハウス見学会をお知らせするチラシを制作しました（架空案件）。
+                    情報量が多いため優先度を整理し、重要な情報はフォントサイズや色で他と差をつけています。写真は、内装を大きく載せ、外観はPhotoshopで切り抜いて配置しました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                情報量が多いため優先度を整理し、重要な情報はフォントサイズや色で他と差をつけています。写真は、内装を大きく載せ、外観はPhotoshopで切り抜いて配置しました。
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img"><img src="images/print03@2x-80.jpg" alt="見学会告知チラシ"></div>
-            </div>
-        </section>
-    </article>
+                <div class="detail_img_wrap">
+                    <div class="detail_img"><img src="images/print03@2x-80.jpg" alt="見学会告知チラシ"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -108,7 +109,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#print">一覧に<br>もどる</a>
         </div>
     </footer>
 
