--- a/works_graphicdesign/print_04.html
+++ b/works_graphicdesign/print_04.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage print_detail_04">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,44 +57,45 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/print04_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>つむぐ。デザイン 名刺</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>名刺</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/print04_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>つむぐ。デザイン 名刺</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>名刺</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator</dd>
+                    </dl>
+                    <p>
+                        「つむぐ。デザイン」の名刺をデザインしました。縦と横の2種類を作成しています。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    「つむぐ。デザイン」の名刺をデザインしました。縦と横の2種類を作成しています。
+                    コンセプトである「物語をつむぐように、デザインをつくる。」を表現できる名刺を目指しました。名刺自体をとても短い本だと捉え、屋号の由来を短い物語として綴っています。<br>
+                    縦向き名刺は、ロゴマークが印象に残るように、パーツである糸車や鳥を配置し、シンプルなデザインにまとめました。<br>
+                    横向き名刺は、物語のイメージが印象に残るように、原稿用紙や羽ペンを握る手をモチーフに取り入れ、表は本の表紙のような配置をイメージしています。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                コンセプトである「物語をつむぐように、デザインをつくる。」を表現できる名刺を目指しました。名刺自体をとても短い本だと捉え、屋号の由来を短い物語として綴っています。<br>
-                縦向き名刺は、ロゴマークが印象に残るように、パーツである糸車や鳥を配置し、シンプルなデザインにまとめました。<br>
-                横向き名刺は、物語のイメージが印象に残るように、原稿用紙や羽ペンを握る手をモチーフに取り入れ、表は本の表紙のような配置をイメージしています。
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img_01"><img src="images/print04_01@2x-80.jpg" alt="名刺縦表"></div>
-                <div class="detail_img_01"><img src="images/print04_02@2x-80.jpg" alt="名刺縦裏"></div>
-            </div>
-            <div class="detail_img_02"><img src="images/print04_03@2x-80.jpg" alt="名刺横表"></div>
-            <div class="detail_img_03"><img src="images/print04_04@2x-80.jpg" alt="名刺横裏"></div>
-        </section>
-    </article>
+                <div class="detail_img_wrap">
+                    <div class="detail_img_01"><img src="images/print04_01@2x-80.jpg" alt="名刺縦表"></div>
+                    <div class="detail_img_01"><img src="images/print04_02@2x-80.jpg" alt="名刺縦裏"></div>
+                </div>
+                <div class="detail_img_02"><img src="images/print04_03@2x-80.jpg" alt="名刺横表"></div>
+                <div class="detail_img_03"><img src="images/print04_04@2x-80.jpg" alt="名刺横裏"></div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -113,7 +114,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#print">一覧に<br>もどる</a>
         </div>
     </footer>
 
