--- a/works_graphicdesign/print_05.html
+++ b/works_graphicdesign/print_05.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage print_detail_05">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,41 +57,42 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/print05_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>焼き鳥屋 開店告知チラシ</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>チラシ</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン</dd>
-                    <dt>制作期間</dt>
-                    <dd>1日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/print05_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>焼き鳥屋 開店告知チラシ</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>チラシ</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン</dd>
+                        <dt>制作期間</dt>
+                        <dd>1日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator<br>Photoshop</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator<br>Photoshop</dd>
+                    </dl>
+                    <p>
+                        焼き鳥屋のオープン告知を目的とした、ポスティング用のチラシをデザインしました。<br>
+                        与えたいお店のイメージは、高級感・おしゃれさ・洗練された雰囲気です（架空案件）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    焼き鳥屋のオープン告知を目的とした、ポスティング用のチラシをデザインしました。<br>
-                    与えたいお店のイメージは、高級感・おしゃれさ・洗練された雰囲気です（架空案件）。
+                    高級感を出すため、メインのフォントに明朝体とセリフ体を選び、配色は黒とゴールドにしました。メインビジュアルにはシズル感のある写真を選び、フェードアウトさせることで、高級感の演出や文字の視認性が下がらないようにしました。イメージ強化のため、ゴールドのグラデーションや鏡面反射も取り入れています。<br>
+                    また、集客効果が期待できる割引の情報は、目に留まりやすいように一番下に帯をつけて、独立した配置にしつつも、統一感のあるデザインを心がけました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                高級感を出すため、メインのフォントに明朝体とセリフ体を選び、配色は黒とゴールドにしました。メインビジュアルにはシズル感のある写真を選び、フェードアウトさせることで、高級感の演出や文字の視認性が下がらないようにしました。イメージ強化のため、ゴールドのグラデーションや鏡面反射も取り入れています。<br>
-                また、集客効果が期待できる割引の情報は、目に留まりやすいように一番下に帯をつけて、独立した配置にしつつも、統一感のあるデザインを心がけました。
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img"><img src="images/print05@2x-80.jpg" alt="開店告知チラシ"></div>
-            </div>
-        </section>
-    </article>
+                <div class="detail_img_wrap">
+                    <div class="detail_img"><img src="images/print05@2x-80.jpg" alt="開店告知チラシ"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -110,7 +111,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#print">一覧に<br>もどる</a>
         </div>
     </footer>
 
