--- a/works_graphicdesign/print_06.html
+++ b/works_graphicdesign/print_06.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage print_detail_06">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,41 +57,42 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/print06_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>「トラックの日」ポスター</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>ポスター</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン・イラスト</dd>
-                    <dt>制作期間</dt>
-                    <dd>3日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/print06_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>「トラックの日」ポスター</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>ポスター</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン・イラスト</dd>
+                        <dt>制作期間</dt>
+                        <dd>3日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator</dd>
+                    </dl>
+                    <p>
+                        「トラックの日」のポスターをデザインしました。令和5年度「トラックの日」ポスターデザインコンテスト（公益社団法人全日本トラック協会）に応募しています。<br>
+                        （結果は8月下旬予定）
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    「トラックの日」のポスターをデザインしました。令和5年度「トラックの日」ポスターデザインコンテスト（公益社団法人全日本トラック協会）に応募しています。<br>
-                    （結果は8月下旬予定）
+                    キャッチコピーからモチーフとしてプラモデルを選びました。プラモデルは一つのパーツが欠けると完成しません。パーツは私たちの街を構成するもの、枠（ランナーやゲート）を道路や繋がりに見立て、それらによって完成した街を載せることで、トラック輸送が私たちの街に不可欠なものであることを表現しました。見た人の目を引くように、色相が離れた配色や、モチーフのサイズ感に差をつけてレイアウトしました。<br>
+                    また、Illustratorでのイラスト素材作成にも挑戦しています。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                キャッチコピーからモチーフとしてプラモデルを選びました。プラモデルは一つのパーツが欠けると完成しません。パーツは私たちの街を構成するもの、枠（ランナーやゲート）を道路や繋がりに見立て、それらによって完成した街を載せることで、トラック輸送が私たちの街に不可欠なものであることを表現しました。見た人の目を引くように、色相が離れた配色や、モチーフのサイズ感に差をつけてレイアウトしました。<br>
-                また、Illustratorでのイラスト素材作成にも挑戦しています。
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img"><img src="images/print06@2x-80.jpg" alt="トラックの日ポスター"></div>
-            </div>
-        </section>
-    </article>
+                <div class="detail_img_wrap">
+                    <div class="detail_img"><img src="images/print06@2x-80.jpg" alt="トラックの日ポスター"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -110,7 +111,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#print">一覧に<br>もどる</a>
         </div>
     </footer>
 
