--- a/works_illustration/color_02.html
+++ b/works_illustration/color_02.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage color_detail_02">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,45 +57,46 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/color02_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>当サイト 挿絵</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>デジタルカラーイラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜着彩</dd>
-                    <dt>制作期間</dt>
-                    <dd>4日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/color02_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>当サイト 挿絵</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>デジタルカラーイラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜着彩</dd>
+                        <dt>制作期間</dt>
+                        <dd>4日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Procreate</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Procreate</dd>
+                    </dl>
+                    <p>
+                        当サイトの挿絵・プロフィール画・モックアップ画・オナガ・文房具のカラーイラストを作成しました。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    当サイトの挿絵・プロフィール画・モックアップ画・オナガ・文房具のカラーイラストを作成しました。
+                    「はじめに」の挿絵では、想いをつむぐ糸車や、大切にしたいお客様へのヒアリング、一つの物語として受け止めデザインしたいという意気込みをイラストに落とし込みました。<br>
+                    また、サイト全体の雰囲気に合わせて、モックアップ用のPC・スマホやクリップなどは手書き風のイラストを作成しています。鳥のマークやサイトタイトルを忍ばせました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                「はじめに」の挿絵では、想いをつむぐ糸車や、大切にしたいお客様へのヒアリング、一つの物語として受け止めデザインしたいという意気込みをイラストに落とし込みました。<br>
-                また、サイト全体の雰囲気に合わせて、モックアップ用のPC・スマホやクリップなどは手書き風のイラストを作成しています。鳥のマークやサイトタイトルを忍ばせました。
-            </p>
-            <div class="detail_img_wrap">
-                <div class="detail_img"><img src="images/color02_01@2x-80.jpg" alt="挿絵01"></div>
-                <div class="detail_img"><img src="images/color02_02@2x-80.jpg" alt="挿絵02"></div>
-                <div class="detail_img"><img src="images/color02_03@2x-80.jpg" alt="挿絵03"></div>
-                <div class="detail_img"><img src="images/color02_04@2x-80.jpg" alt="挿絵04"></div>
-                <div class="detail_img"><img src="images/color02_05@2x-80.jpg" alt="挿絵05"></div>
-                <div class="detail_img"><img src="images/color02_06@2x-80.jpg" alt="挿絵06"></div>
-            </div>
-        </section>
-    </article>
+                <div class="detail_img_wrap">
+                    <div class="detail_img"><img src="images/color02_01@2x-80.jpg" alt="挿絵01"></div>
+                    <div class="detail_img"><img src="images/color02_02@2x-80.jpg" alt="挿絵02"></div>
+                    <div class="detail_img"><img src="images/color02_03@2x-80.jpg" alt="挿絵03"></div>
+                    <div class="detail_img"><img src="images/color02_04@2x-80.jpg" alt="挿絵04"></div>
+                    <div class="detail_img"><img src="images/color02_05@2x-80.jpg" alt="挿絵05"></div>
+                    <div class="detail_img"><img src="images/color02_06@2x-80.jpg" alt="挿絵06"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -114,7 +115,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#color">一覧に<br>もどる</a>
         </div>
     </footer>
 
