--- a/works_illustration/color_05.html
+++ b/works_illustration/color_05.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage color_detail_05">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,36 +57,37 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/color05@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>ミズクラゲは夢の中</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>デジタルカラーイラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜着彩</dd>
-                    <dt>制作期間</dt>
-                    <dd>3日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/color05@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>ミズクラゲは夢の中</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>デジタルカラーイラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜着彩</dd>
+                        <dt>制作期間</dt>
+                        <dd>3日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Procreate</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Procreate</dd>
+                    </dl>
+                    <p>
+                        ミズクラゲの上で眠る女の子を描きました（自主制作）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    ミズクラゲの上で眠る女の子を描きました（自主制作）。
+                    ミズクラゲに沈むような柔らかさや透明感、水中の浮遊感を意識しながら、モチーフの構成と着彩をしました。カラフルな印象を持たせたかったので、クラゲに透ける光の色や、女の子の服の影などの色は色相に幅を持たせて色を選んでいます。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                ミズクラゲに沈むような柔らかさや透明感、水中の浮遊感を意識しながら、モチーフの構成と着彩をしました。カラフルな印象を持たせたかったので、クラゲに透ける光の色や、女の子の服の影などの色は色相に幅を持たせて色を選んでいます。
-            </p>
-        </section>
-    </article>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -105,7 +106,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#color">一覧に<br>もどる</a>
         </div>
     </footer>
 
