--- a/works_illustration/index.html
+++ b/works_illustration/index.html
@@ -20,7 +20,7 @@
 
 <body class="lowerpage list_web">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -60,82 +60,84 @@
         </div>
     </header>
 
-    <section class="illust_list">
-        <div class="list_wrap">
-            <div class="list_title">
-                <h2>イラスト</h2>
-                <div class="pic_hand"><img src="images/list_illust_top.svg" alt="絵を描く手"></div>
+    <main id="main" class="fade">
+        <section class="illust_list">
+            <div class="list_wrap">
+                <div class="list_title">
+                    <h2>イラスト</h2>
+                    <div class="pic_hand"><img src="images/list_illust_top.svg" alt="絵を描く手"></div>
+                </div>
+                <div class="list_text">
+                    <p>
+                        制作したイラストをご紹介いたします。<br>
+                        デフォルメされたゆるい画風から、描き込みを重視したイラスト、また、透明水彩を使ったアナログイラストも制作しています。
+                    </p>
+                    <ul>
+                        <li><a href="#line">線画イラスト</a></li>
+                        <li><a href="#color">カラーイラスト</a></li>
+                        <li><a href="#watercolor">水彩イラスト</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="list_text">
-                <p>
-                    制作したイラストをご紹介いたします。<br>
-                    デフォルメされたゆるい画風から、描き込みを重視したイラスト、また、透明水彩を使ったアナログイラストも制作しています。
-                </p>
-                <ul>
-                    <li><a href="#line">線画イラスト</a></li>
-                    <li><a href="#color">カラーイラスト</a></li>
-                    <li><a href="#watercolor">水彩イラスト</a></li>
-                </ul>
-            </div>
-        </div>
-        <section id="line" class="list_content">
-            <h3>線画イラスト</h3>
-            <div class="list_slider">
-                <a href="line_01.html" class="list_slider_img">
-                    <img src="images/list_line_01@2x-80.jpg" alt="物語る手">
-                    <h4>物語る手<br>（当サイト 挿絵）</h4>
-                </a>
-                <a href="line_02.html" class="list_slider_img">
-                    <img src="images/list_line_02@2x-80.jpg" alt="当サイト 挿絵">
-                    <h4>当サイト 挿絵</h4>
-                </a>
-            </div>
+            <section id="line" class="list_content">
+                <h3>線画イラスト</h3>
+                <div class="list_slider">
+                    <a href="line_01.html" class="list_slider_img">
+                        <img src="images/list_line_01@2x-80.jpg" alt="物語る手">
+                        <h4>物語る手<br>（当サイト 挿絵）</h4>
+                    </a>
+                    <a href="line_02.html" class="list_slider_img">
+                        <img src="images/list_line_02@2x-80.jpg" alt="当サイト 挿絵">
+                        <h4>当サイト 挿絵</h4>
+                    </a>
+                </div>
+            </section>
+            <section id="color" class="list_content">
+                <h3>カラーイラスト</h3>
+                <div class="list_slider">
+                    <a href="color_01.html" class="list_slider_img">
+                        <img src="images/list_color_01@2x-80.jpg" alt="当サイト メインビジュアル">
+                        <h4>当サイト メインビジュアル</h4>
+                    </a>
+                    <a href="color_02.html" class="list_slider_img">
+                        <img src="images/list_color_02@2x-80.jpg" alt="当サイト 挿絵">
+                        <h4>当サイト 挿絵</h4>
+                    </a>
+                    <a href="color_05.html" class="list_slider_img">
+                        <img src="images/list_color_05@2x-80.jpg" alt="ミズクラゲは夢の中">
+                        <h4>ミズクラゲは夢の中</h4>
+                    </a>
+                    <a href="color_03.html" class="list_slider_img">
+                        <img src="images/list_color_03@2x-80.jpg" alt="I.Y 様 アイコンイラスト">
+                        <h4>I.Y 様<br>アイコンイラスト</h4>
+                    </a>
+                    <a href="color_04.html" class="list_slider_img">
+                        <img src="images/list_color_04@2x-80.jpg" alt="K.N 様 アイコンイラスト">
+                        <h4>K.N 様<br>アイコンイラスト</h4>
+                    </a>
+                </div>
+            </section>
+            <section id="watercolor" class="list_content">
+                <h3>水彩イラスト</h3>
+                <div class="list_slider">
+                    <a href="water_01.html" class="list_slider_img">
+                        <img src="images/list_water_01@2x-80.jpg" alt="夕暮れを泳ぐ鯨">
+                        <h4>夕暮れを泳ぐ鯨</h4>
+                    </a>
+                    <a href="water_02.html" class="list_slider_img">
+                        <img src="images/list_water_02@2x-80.jpg" alt="Good night">
+                        <h4>Good night</h4>
+                    </a>
+                    <a href="water_03.html" class="list_slider_img">
+                        <img src="images/list_water_03@2x-80.jpg" alt="氷のアネモネ">
+                        <h4>氷のアネモネ</h4>
+                    </a>
+                </div>
+            </section>
         </section>
-        <section id="color" class="list_content">
-            <h3>カラーイラスト</h3>
-            <div class="list_slider">
-                <a href="color_01.html" class="list_slider_img">
-                    <img src="images/list_color_01@2x-80.jpg" alt="当サイト メインビジュアル">
-                    <h4>当サイト メインビジュアル</h4>
-                </a>
-                <a href="color_02.html" class="list_slider_img">
-                    <img src="images/list_color_02@2x-80.jpg" alt="当サイト 挿絵">
-                    <h4>当サイト 挿絵</h4>
-                </a>
-                <a href="color_05.html" class="list_slider_img">
-                    <img src="images/list_color_05@2x-80.jpg" alt="ミズクラゲは夢の中">
-                    <h4>ミズクラゲは夢の中</h4>
-                </a>
-                <a href="color_03.html" class="list_slider_img">
-                    <img src="images/list_color_03@2x-80.jpg" alt="I.Y 様 アイコンイラスト">
-                    <h4>I.Y 様<br>アイコンイラスト</h4>
-                </a>
-                <a href="color_04.html" class="list_slider_img">
-                    <img src="images/list_color_04@2x-80.jpg" alt="K.N 様 アイコンイラスト">
-                    <h4>K.N 様<br>アイコンイラスト</h4>
-                </a>
-            </div>
-        </section>
-        <section id="watercolor" class="list_content">
-            <h3>水彩イラスト</h3>
-            <div class="list_slider">
-                <a href="water_01.html" class="list_slider_img">
-                    <img src="images/list_water_01@2x-80.jpg" alt="夕暮れを泳ぐ鯨">
-                    <h4>夕暮れを泳ぐ鯨</h4>
-                </a>
-                <a href="water_02.html" class="list_slider_img">
-                    <img src="images/list_water_02@2x-80.jpg" alt="Good night">
-                    <h4>Good night</h4>
-                </a>
-                <a href="water_03.html" class="list_slider_img">
-                    <img src="images/list_water_03@2x-80.jpg" alt="氷のアネモネ">
-                    <h4>氷のアネモネ</h4>
-                </a>
-            </div>
-        </section>
-    </section>
+    </main>
 
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
