--- a/works_illustration/line_01.html
+++ b/works_illustration/line_01.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage line_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,40 +57,41 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="photo_slider">
-            <div class="img_horizonal"><img src="images/line01_01@2x.png" alt="物語る手1"></div>
-            <div class="img_horizonal"><img src="images/line01_02@2x.png" alt="物語る手2"></div>
-        </div>
-        <section class="works_content">
-            <h2>物語る手（当サイト挿絵）</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>デジタル線画イラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜清書</dd>
-                    <dt>制作期間</dt>
-                    <dd>1日</dd>
-                    <!-- <dt>費用</dt>
-                    <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Procreate<br>Illustrator</dd>
-                </dl>
-                <p>
-                    当サイト用に描き下ろした「物語る手」シリーズです。Procreateでイラストを書いた後、Illustratorでベクターデータに変換しています。
-                </p>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="photo_slider">
+                <div class="img_horizonal"><img src="images/line01_01@2x.png" alt="物語る手1"></div>
+                <div class="img_horizonal"><img src="images/line01_02@2x.png" alt="物語る手2"></div>
             </div>
-            <h3>制作のポイント</h3>
-            <p>
-                当サイトのキーワードである「物語」を表現するため、各コンテンツに関連した手の動きを線画で作成しました。<br>
-                目の表情と同様に、手も人の言動を物語っていると考えています。また、ポートフォリオを構成するコンテンツに添えることで、物語を読んだときにその情景を思い出す感覚を表現しました。
-            </p>
-        </section>
-    </article>
+            <section class="works_content">
+                <h2>物語る手（当サイト挿絵）</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>デジタル線画イラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜清書</dd>
+                        <dt>制作期間</dt>
+                        <dd>1日</dd>
+                        <!-- <dt>費用</dt>
+                    <dd>テキスト</dd> -->
+                        <dt>ツール</dt>
+                        <dd>Procreate<br>Illustrator</dd>
+                    </dl>
+                    <p>
+                        当サイト用に描き下ろした「物語る手」シリーズです。Procreateでイラストを書いた後、Illustratorでベクターデータに変換しています。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
+                <p>
+                    当サイトのキーワードである「物語」を表現するため、各コンテンツに関連した手の動きを線画で作成しました。<br>
+                    目の表情と同様に、手も人の言動を物語っていると考えています。また、ポートフォリオを構成するコンテンツに添えることで、物語を読んだときにその情景を思い出す感覚を表現しました。
+                </p>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -109,7 +110,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#line">一覧に<br>もどる</a>
         </div>
     </footer>
 
