--- a/works_illustration/line_02.html
+++ b/works_illustration/line_02.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage line_detail_02">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,36 +57,37 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/line02@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>当サイト 挿絵</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>デジタル線画イラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜清書</dd>
-                    <dt>制作期間</dt>
-                    <dd>1日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/line02@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>当サイト 挿絵</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>デジタル線画イラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜清書</dd>
+                        <dt>制作期間</dt>
+                        <dd>1日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Procreate<br>Illustrator</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Procreate<br>Illustrator</dd>
+                    </dl>
+                    <p>
+                        当サイトの「作者あとがき」で使用した線画イラストです。Procreateでイラストを書いた後、Illustratorでベクターデータに変換しています。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    当サイトの「作者あとがき」で使用した線画イラストです。Procreateでイラストを書いた後、Illustratorでベクターデータに変換しています。
+                    自己紹介の内容に関連したモチーフの線画を描きました。ノートの隅に描く落書きのようなイメージで、筆跡を残したようなタッチにしています。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                自己紹介の内容に関連したモチーフの線画を描きました。ノートの隅に描く落書きのようなイメージで、筆跡を残したようなタッチにしています。
-            </p>
-        </section>
-    </article>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -105,7 +106,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#line">一覧に<br>もどる</a>
         </div>
     </footer>
 
