--- a/works_illustration/water_01.html
+++ b/works_illustration/water_01.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage water_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,36 +57,37 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/water01@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>夕暮れを泳ぐ鯨</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>水彩イラスト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ラフ作成〜着彩</dd>
-                    <dt>制作期間</dt>
-                    <dd>3日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/water01@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>夕暮れを泳ぐ鯨</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>水彩イラスト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ラフ作成〜着彩</dd>
+                        <dt>制作期間</dt>
+                        <dd>3日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>透明水彩絵の具</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>透明水彩絵の具</dd>
+                    </dl>
+                    <p>
+                        白い鯨と女の子のイラストを作成しました（自主制作）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    白い鯨と女の子のイラストを作成しました（自主制作）。
+                    カラフルな夕暮れをイメージして作成しました。マスキングをして紙の白を残すことで、水しぶきや光を表現しています。また、あえて水彩境界を残して雲の重なりをつくりました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                カラフルな夕暮れをイメージして作成しました。マスキングをして紙の白を残すことで、水しぶきや光を表現しています。また、あえて水彩境界を残して雲の重なりをつくりました。
-            </p>
-        </section>
-    </article>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -105,7 +106,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#watercolor">一覧に<br>もどる</a>
         </div>
     </footer>
 
