--- a/works_photo/index.html
+++ b/works_photo/index.html
@@ -20,7 +20,7 @@
 
 <body class="lowerpage list_photo">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -60,74 +60,76 @@
         </div>
     </header>
 
-    <section class="photo_list">
-        <div class="list_wrap">
-            <div class="list_title">
-                <h2>写　真</h2>
-                <div class="pic_hand"><img src="images/list_photo_top.svg" alt="カメラを持つ手"></div>
+    <main id="main" class="fade">
+        <section class="photo_list">
+            <div class="list_wrap">
+                <div class="list_title">
+                    <h2>写　真</h2>
+                    <div class="pic_hand"><img src="images/list_photo_top.svg" alt="カメラを持つ手"></div>
+                </div>
+                <div class="list_text">
+                    <p>
+                        撮影・編集した写真をご紹介いたします。<br>
+                        ロケーションと被写体、両方の魅力を引き出せるような雰囲気・構図・シチュエーションを切り取ります。フィルム調や落ち着きのある雰囲気の写真編集が得意です。
+                    </p>
+                    <ul>
+                        <li><a href="#view">風景・内装写真</a></li>
+                        <li><a href="#portrait">人物写真</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="list_text">
-                <p>
-                    撮影・編集した写真をご紹介いたします。<br>
-                    ロケーションと被写体、両方の魅力を引き出せるような雰囲気・構図・シチュエーションを切り取ります。フィルム調や落ち着きのある雰囲気の写真編集が得意です。
-                </p>
-                <ul>
-                    <li><a href="#view">風景・内装写真</a></li>
-                    <li><a href="#portrate">人物写真</a></li>
-                </ul>
-            </div>
-        </div>
-        <section id="view" class="list_content">
-            <h3>風景・内装写真</h3>
-            <div class="list_slider">
-                <a href="view_02.html" class="list_slider_img">
-                    <img src="images/list_view_02@2x-80.jpg" alt="武家屋敷旧内山家">
-                    <h4>武家屋敷（6枚）</h4>
-                </a>
-                <a href="view_01.html" class="list_slider_img">
-                    <img src="images/list_view_01@2x-80.jpg" alt="カフェ">
-                    <h4>カフェ（6枚）</h4>
-                </a>
-                <a href="view_03.html" class="list_slider_img">
-                    <img src="images/list_view_03@2x-80.jpg" alt="古道具屋">
-                    <h4>古道具店（8枚）</h4>
-                </a>
-                <a href="view_04.html" class="list_slider_img">
-                    <img src="images/list_view_04@2x-80.jpg" alt="雑貨店">
-                    <h4>雑貨店（6枚）</h4>
-                </a>
-            </div>
+            <section id="view" class="list_content">
+                <h3>風景・内装写真</h3>
+                <div class="list_slider">
+                    <a href="view_02.html" class="list_slider_img">
+                        <img src="images/list_view_02@2x-80.jpg" alt="武家屋敷旧内山家">
+                        <h4>武家屋敷（6枚）</h4>
+                    </a>
+                    <a href="view_01.html" class="list_slider_img">
+                        <img src="images/list_view_01@2x-80.jpg" alt="カフェ">
+                        <h4>カフェ（6枚）</h4>
+                    </a>
+                    <a href="view_03.html" class="list_slider_img">
+                        <img src="images/list_view_03@2x-80.jpg" alt="古道具屋">
+                        <h4>古道具店（8枚）</h4>
+                    </a>
+                    <a href="view_04.html" class="list_slider_img">
+                        <img src="images/list_view_04@2x-80.jpg" alt="雑貨店">
+                        <h4>雑貨店（6枚）</h4>
+                    </a>
+                </div>
+            </section>
+            <section id="portrait" class="list_content">
+                <h3>人物写真</h3>
+                <div class="list_slider">
+                    <a href="port_01.html" class="list_slider_img">
+                        <img src="images/list_port_01@2x-80.jpg" alt="ガラスの冬">
+                        <h4>ガラスの冬（6枚）</h4>
+                    </a>
+                    <a href="port_03.html" class="list_slider_img">
+                        <img src="images/list_port_03@2x-80.jpg" alt="夜の海">
+                        <h4>夜の海（4枚）</h4>
+                    </a>
+                    <a href="port_02.html" class="list_slider_img">
+                        <img src="images/list_port_02@2x-80.jpg" alt="Walk in the light.">
+                        <h4>Walk in the light<br>（6枚）</h4>
+                    </a>
+                    <a href="port_04.html" class="list_slider_img">
+                        <img src="images/list_port_06@2x-80.jpg" alt="思い出を辿る">
+                        <h4>思い出を辿る（8枚）</h4>
+                    </a>
+                    <a href="port_05.html" class="list_slider_img">
+                        <img src="images/list_port_05@2x-80.jpg" alt="梅雨某日">
+                        <h4>梅雨某日（6枚）</h4>
+                    </a>
+                </div>
+            </section>
+            <a class="link_insta" href="https://www.instagram.com/_tsumugu.photo_/"><img src="images/insta_link.svg"
+                    alt="Instagramを見る"></a>
         </section>
-        <section id="portrate" class="list_content">
-            <h3>人物写真</h3>
-            <div class="list_slider">
-                <a href="port_01.html" class="list_slider_img">
-                    <img src="images/list_port_01@2x-80.jpg" alt="ガラスの冬">
-                    <h4>ガラスの冬（6枚）</h4>
-                </a>
-                <a href="port_03.html" class="list_slider_img">
-                    <img src="images/list_port_03@2x-80.jpg" alt="夜の海">
-                    <h4>夜の海（4枚）</h4>
-                </a>
-                <a href="port_02.html" class="list_slider_img">
-                    <img src="images/list_port_02@2x-80.jpg" alt="Walk in the light.">
-                    <h4>Walk in the light<br>（6枚）</h4>
-                </a>
-                <a href="port_04.html" class="list_slider_img">
-                    <img src="images/list_port_06@2x-80.jpg" alt="思い出を辿る">
-                    <h4>思い出を辿る（8枚）</h4>
-                </a>
-                <a href="port_05.html" class="list_slider_img">
-                    <img src="images/list_port_05@2x-80.jpg" alt="梅雨某日">
-                    <h4>梅雨某日（6枚）</h4>
-                </a>
-            </div>
-        </section>
-        <a class="link_insta" href="https://www.instagram.com/_tsumugu.photo_/"><img src="images/insta_link.svg"
-                alt="Instagramを見る"></a>
-    </section>
+    </main>
 
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
