--- a/works_photo/port_01.html
+++ b/works_photo/port_01.html
@@ -26,7 +26,7 @@
 
 <body class="lowerpage port_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -66,49 +66,50 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="photo_slider">
-            <div class="img_horizonal"><a href="images/port01_01@2x.png" data-lightbox="photo"><img
-                        src="images/port01_01@2x.png" alt="ガラスの冬1"></a></div>
-            <div class="img_vertical"><a href="images/port01_02@2x.png" data-lightbox="photo"><img
-                        src="images/port01_02@2x.png" alt="ガラスの冬2"></a></div>
-            <div class="img_horizonal"><a href="images/port01_03@2x.png" data-lightbox="photo"><img
-                        src="images/port01_03@2x.png" alt="ガラスの冬3"></a></div>
-            <div class="img_vertical"><a href="images/port01_04@2x.png" data-lightbox="photo"><img
-                        src="images/port01_04@2x.png" alt="ガラスの冬4"></a></div>
-            <div class="img_horizonal"><a href="images/port01_05@2x.png" data-lightbox="photo"><img
-                        src="images/port01_05@2x.png" alt="ガラスの冬5"></a></div>
-            <div class="img_vertical"><a href="images/port01_06@2x.png" data-lightbox="photo"><img
-                        src="images/port01_06@2x.png" alt="ガラスの冬6"></a></div>
-        </div>
-        <section class="works_content">
-            <h2>ガラスの冬（6枚）</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>人物撮影</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ロケーション選定<br>撮影・編集</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
-                    <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>フルサイズ一眼レフ<br>Lightroom</dd>
-                </dl>
-                <p>
-                    ガラス張りの建物がある公園で撮影をしました（自主制作）。
-                </p>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="photo_slider">
+                <div class="img_horizonal"><a href="images/port01_01@2x.png" data-lightbox="photo"><img
+                            src="images/port01_01@2x.png" alt="ガラスの冬1"></a></div>
+                <div class="img_vertical"><a href="images/port01_02@2x.png" data-lightbox="photo"><img
+                            src="images/port01_02@2x.png" alt="ガラスの冬2"></a></div>
+                <div class="img_horizonal"><a href="images/port01_03@2x.png" data-lightbox="photo"><img
+                            src="images/port01_03@2x.png" alt="ガラスの冬3"></a></div>
+                <div class="img_vertical"><a href="images/port01_04@2x.png" data-lightbox="photo"><img
+                            src="images/port01_04@2x.png" alt="ガラスの冬4"></a></div>
+                <div class="img_horizonal"><a href="images/port01_05@2x.png" data-lightbox="photo"><img
+                            src="images/port01_05@2x.png" alt="ガラスの冬5"></a></div>
+                <div class="img_vertical"><a href="images/port01_06@2x.png" data-lightbox="photo"><img
+                            src="images/port01_06@2x.png" alt="ガラスの冬6"></a></div>
             </div>
-            <h3>制作のポイント</h3>
-            <p>
-                ガラスや鉄骨が直線的で無機質な雰囲気だったので、小道具として暖色系の花を取り入れて撮影しました。建物の静かで無機質な印象を表現できるように、モデルの立ち位置やポーズ、構図を決めています。<br>全体的に寒色よりに色を編集しつつも、モデルの肌の血色が失われないように調整しました。
-            </p>
-        </section>
-    </article>
+            <section class="works_content">
+                <h2>ガラスの冬（6枚）</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>人物撮影</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ロケーション選定<br>撮影・編集</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
+                    <dd>テキスト</dd> -->
+                        <dt>ツール</dt>
+                        <dd>フルサイズ一眼レフ<br>Lightroom</dd>
+                    </dl>
+                    <p>
+                        ガラス張りの建物がある公園で撮影をしました（自主制作）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
+                <p>
+                    ガラスや鉄骨が直線的で無機質な雰囲気だったので、小道具として暖色系の花を取り入れて撮影しました。建物の静かで無機質な印象を表現できるように、モデルの立ち位置やポーズ、構図を決めています。<br>全体的に寒色よりに色を編集しつつも、モデルの肌の血色が失われないように調整しました。
+                </p>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -127,7 +128,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#portrait">一覧に<br>もどる</a>
         </div>
     </footer>
 
