--- a/works_photo/port_03.html
+++ b/works_photo/port_03.html
@@ -26,7 +26,7 @@
 
 <body class="lowerpage port_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -66,45 +66,46 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="photo_slider">
-            <div class="img_horizonal"><a href="images/port03_01@2x.png" data-lightbox="photo"><img
-                        src="images/port03_01@2x.png" alt="夜の海1"></a></div>
-            <div class="img_vertical"><a href="images/port03_02@2x.png" data-lightbox="photo"><img
-                        src="images/port03_02@2x.png" alt="夜の海2"></a></div>
-            <div class="img_horizonal"><a href="images/port03_03@2x.png" data-lightbox="photo"><img
-                        src="images/port03_03@2x.png" alt="夜の海3"></a></div>
-            <div class="img_vertical"><a href="images/port03_04@2x.png" data-lightbox="photo"><img
-                        src="images/port03_04@2x.png" alt="夜の海4"></a></div>
-        </div>
-        <section class="works_content">
-            <h2>夜の海（4枚）</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>人物撮影</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ロケーション選定<br>撮影・編集</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
-                    <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>フルサイズ一眼レフ<br>ストロボ<br>Lightroom</dd>
-                </dl>
-                <p>
-                    夜の市街地で撮影をしました（自主制作）。
-                </p>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="photo_slider">
+                <div class="img_horizonal"><a href="images/port03_01@2x.png" data-lightbox="photo"><img
+                            src="images/port03_01@2x.png" alt="夜の海1"></a></div>
+                <div class="img_vertical"><a href="images/port03_02@2x.png" data-lightbox="photo"><img
+                            src="images/port03_02@2x.png" alt="夜の海2"></a></div>
+                <div class="img_horizonal"><a href="images/port03_03@2x.png" data-lightbox="photo"><img
+                            src="images/port03_03@2x.png" alt="夜の海3"></a></div>
+                <div class="img_vertical"><a href="images/port03_04@2x.png" data-lightbox="photo"><img
+                            src="images/port03_04@2x.png" alt="夜の海4"></a></div>
             </div>
-            <h3>制作のポイント</h3>
-            <p>
-                ストロボとスローシャッターで、光の軌跡が残る方法を取り入れて撮影をしました。シャッター速度やシャッターが閉じるまでのカメラの動かし方で軌跡を調整しています。信号や街頭など光の色の種類が多い市街地を選びました。
-            </p>
-        </section>
-    </article>
+            <section class="works_content">
+                <h2>夜の海（4枚）</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>人物撮影</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ロケーション選定<br>撮影・編集</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
+                    <dd>テキスト</dd> -->
+                        <dt>ツール</dt>
+                        <dd>フルサイズ一眼レフ<br>ストロボ<br>Lightroom</dd>
+                    </dl>
+                    <p>
+                        夜の市街地で撮影をしました（自主制作）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
+                <p>
+                    ストロボとスローシャッターで、光の軌跡が残る方法を取り入れて撮影をしました。シャッター速度やシャッターが閉じるまでのカメラの動かし方で軌跡を調整しています。信号や街頭など光の色の種類が多い市街地を選びました。
+                </p>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -123,7 +124,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#portrait">一覧に<br>もどる</a>
         </div>
     </footer>
 
