--- a/works_photo/port_04.html
+++ b/works_photo/port_04.html
@@ -26,7 +26,7 @@
 
 <body class="lowerpage port_detail_04">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -66,53 +66,54 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="photo_slider">
-            <div class="img_horizonal"><a href="images/port04_01@2x.png" data-lightbox="photo"><img
-                        src="images/port04_01@2x.png" alt="かすみ草1"></a></div>
-            <div class="img_vertical"><a href="images/port04_02@2x.png" data-lightbox="photo"><img
-                        src="images/port04_02@2x.png" alt="かすみ草2"></a></div>
-            <div class="img_horizonal"><a href="images/port04_03@2x.png" data-lightbox="photo"><img
-                        src="images/port04_03@2x.png" alt="かすみ草3"></a></div>
-            <div class="img_vertical"><a href="images/port04_04@2x.png" data-lightbox="photo"><img
-                        src="images/port04_04@2x.png" alt="かすみ草4"></a></div>
-            <div class="img_vertical"><a href="images/port04_05@2x.png" data-lightbox="photo"><img
-                        src="images/port04_05@2x.png" alt="かすみ草5"></a></div>
-            <div class="img_vertical"><a href="images/port04_06@2x.png" data-lightbox="photo"><img
-                        src="images/port04_06@2x.png" alt="かすみ草6"></a></div>
-            <div class="img_vertical"><a href="images/port04_07@2x.png" data-lightbox="photo"><img
-                        src="images/port04_07@2x.png" alt="かすみ草7"></a></div>
-            <div class="img_vertical"><a href="images/port04_08@2x.png" data-lightbox="photo"><img
-                        src="images/port04_08@2x.png" alt="かすみ草8"></a></div>
-        </div>
-        <section class="works_content">
-            <h2>思い出を辿る（8枚）</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>人物撮影</dd>
-                    <dt>担当範囲</dt>
-                    <dd>ロケーション選定<br>撮影・編集</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
-                    <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>フルサイズ一眼レフ<br>Lightroom</dd>
-                </dl>
-                <p>
-                    光が柔らかい早朝に撮影をしました（自主制作）。
-                </p>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="photo_slider">
+                <div class="img_horizonal"><a href="images/port04_01@2x.png" data-lightbox="photo"><img
+                            src="images/port04_01@2x.png" alt="かすみ草1"></a></div>
+                <div class="img_vertical"><a href="images/port04_02@2x.png" data-lightbox="photo"><img
+                            src="images/port04_02@2x.png" alt="かすみ草2"></a></div>
+                <div class="img_horizonal"><a href="images/port04_03@2x.png" data-lightbox="photo"><img
+                            src="images/port04_03@2x.png" alt="かすみ草3"></a></div>
+                <div class="img_vertical"><a href="images/port04_04@2x.png" data-lightbox="photo"><img
+                            src="images/port04_04@2x.png" alt="かすみ草4"></a></div>
+                <div class="img_vertical"><a href="images/port04_05@2x.png" data-lightbox="photo"><img
+                            src="images/port04_05@2x.png" alt="かすみ草5"></a></div>
+                <div class="img_vertical"><a href="images/port04_06@2x.png" data-lightbox="photo"><img
+                            src="images/port04_06@2x.png" alt="かすみ草6"></a></div>
+                <div class="img_vertical"><a href="images/port04_07@2x.png" data-lightbox="photo"><img
+                            src="images/port04_07@2x.png" alt="かすみ草7"></a></div>
+                <div class="img_vertical"><a href="images/port04_08@2x.png" data-lightbox="photo"><img
+                            src="images/port04_08@2x.png" alt="かすみ草8"></a></div>
             </div>
-            <h3>制作のポイント</h3>
-            <p>
-                画面の奥行きや花束の使い方を工夫しながら撮影しました。花束の緑や水面の青、肌色がきれいに出るように、彩度や輝度、色相を調整しています。
-            </p>
-        </section>
-    </article>
+            <section class="works_content">
+                <h2>思い出を辿る（8枚）</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>人物撮影</dd>
+                        <dt>担当範囲</dt>
+                        <dd>ロケーション選定<br>撮影・編集</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
+                    <dd>テキスト</dd> -->
+                        <dt>ツール</dt>
+                        <dd>フルサイズ一眼レフ<br>Lightroom</dd>
+                    </dl>
+                    <p>
+                        光が柔らかい早朝に撮影をしました（自主制作）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
+                <p>
+                    画面の奥行きや花束の使い方を工夫しながら撮影しました。花束の緑や水面の青、肌色がきれいに出るように、彩度や輝度、色相を調整しています。
+                </p>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -131,7 +132,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#portrait">一覧に<br>もどる</a>
         </div>
     </footer>
 
