--- a/works_photo/view_01.html
+++ b/works_photo/view_01.html
@@ -26,7 +26,7 @@
 
 <body class="lowerpage view_detail_01">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -66,49 +66,50 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="photo_slider">
-            <div class="img_horizonal"><a href="images/view01_1@2x.png" data-lightbox="view01"><img
-                        src="images/view01_1@2x.png" alt="カフェ写真1"></a></div>
-            <div class="img_horizonal"><a href="images/view01_2@2x.png" data-lightbox="view01"><img
-                        src="images/view01_2@2x.png" alt="カフェ写真2"></a></div>
-            <div class="img_vertical"><a href="images/view01_3@2x.png" data-lightbox="view01"><img
-                        src="images/view01_3@2x.png" alt="カフェ写真3"></a></div>
-            <div class="img_horizonal"><a href="images/view01_4@2x.png" data-lightbox="view01"><img
-                        src="images/view01_4@2x.png" alt="カフェ写真4"></a></div>
-            <div class="img_horizonal"><a href="images/view01_5@2x.png" data-lightbox="view01"><img
-                        src="images/view01_5@2x.png" alt="カフェ写真5"></a></div>
-            <div class="img_vertical"><a href="images/view01_6@2x.png" data-lightbox="view01"><img
-                        src="images/view01_6@2x.png" alt="カフェ写真6"></a></div>
-        </div>
-        <section class="works_content">
-            <h2>カフェ（6枚）</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>内装撮影</dd>
-                    <dt>担当範囲</dt>
-                    <dd>撮影・編集</dd>
-                    <dt>制作期間</dt>
-                    <dd>1日</dd>
-                    <!-- <dt>費用</dt>
-                    <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>フルサイズ一眼レフ<br>Lightroom</dd>
-                </dl>
-                <p>
-                    ブックカフェで内装の撮影をしました（自主制作）。
-                </p>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="photo_slider">
+                <div class="img_horizonal"><a href="images/view01_1@2x.png" data-lightbox="view01"><img
+                            src="images/view01_1@2x.png" alt="カフェ写真1"></a></div>
+                <div class="img_horizonal"><a href="images/view01_2@2x.png" data-lightbox="view01"><img
+                            src="images/view01_2@2x.png" alt="カフェ写真2"></a></div>
+                <div class="img_vertical"><a href="images/view01_3@2x.png" data-lightbox="view01"><img
+                            src="images/view01_3@2x.png" alt="カフェ写真3"></a></div>
+                <div class="img_horizonal"><a href="images/view01_4@2x.png" data-lightbox="view01"><img
+                            src="images/view01_4@2x.png" alt="カフェ写真4"></a></div>
+                <div class="img_horizonal"><a href="images/view01_5@2x.png" data-lightbox="view01"><img
+                            src="images/view01_5@2x.png" alt="カフェ写真5"></a></div>
+                <div class="img_vertical"><a href="images/view01_6@2x.png" data-lightbox="view01"><img
+                            src="images/view01_6@2x.png" alt="カフェ写真6"></a></div>
             </div>
-            <h3>制作のポイント</h3>
-            <p>
-                店内の雰囲気とブックカフェで過ごす一コマを撮影しました。静かで落ち着いた雰囲気を表現するために、レンズフィルターで光をぼかして撮影し、フェードをかけて、あたたかみのある色合いに編集しました。
-            </p>
-        </section>
-    </article>
+            <section class="works_content">
+                <h2>カフェ（6枚）</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>内装撮影</dd>
+                        <dt>担当範囲</dt>
+                        <dd>撮影・編集</dd>
+                        <dt>制作期間</dt>
+                        <dd>1日</dd>
+                        <!-- <dt>費用</dt>
+                    <dd>テキスト</dd> -->
+                        <dt>ツール</dt>
+                        <dd>フルサイズ一眼レフ<br>Lightroom</dd>
+                    </dl>
+                    <p>
+                        ブックカフェで内装の撮影をしました（自主制作）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
+                <p>
+                    店内の雰囲気とブックカフェで過ごす一コマを撮影しました。静かで落ち着いた雰囲気を表現するために、レンズフィルターで光をぼかして撮影し、フェードをかけて、あたたかみのある色合いに編集しました。
+                </p>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -127,7 +128,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#view">一覧に<br>もどる</a>
         </div>
     </footer>
 
