--- a/works_photo/view_02.html
+++ b/works_photo/view_02.html
@@ -26,7 +26,7 @@
 
 <body class="lowerpage view_detail_02">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -66,49 +66,50 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="photo_slider">
-            <div class="img_horizonal"><a href="images/view02_01@2x.png" data-lightbox="view01"><img
-                        src="images/view02_01@2x.png" alt="武家屋敷1"></a></div>
-            <div class="img_vertical"><a href="images/view02_02@2x.png" data-lightbox="view01"><img
-                        src="images/view02_02@2x.png" alt="武家屋敷2"></a></div>
-            <div class="img_horizonal"><a href="images/view02_03@2x.png" data-lightbox="view01"><img
-                        src="images/view02_03@2x.png" alt="武家屋敷3"></a></div>
-            <div class="img_horizonal"><a href="images/view02_04@2x.png" data-lightbox="view01"><img
-                        src="images/view02_04@2x.png" alt="武家屋敷4"></a></div>
-            <div class="img_vertical"><a href="images/view02_05@2x.png" data-lightbox="view01"><img
-                        src="images/view02_05@2x.png" alt="武家屋敷5"></a></div>
-            <div class="img_vertical"><a href="images/view02_06@2x.png" data-lightbox="view01"><img
-                        src="images/view02_06@2x.png" alt="武家屋敷6"></a></div>
-        </div>
-        <section class="works_content">
-            <h2>武家屋敷（6枚）</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>内装撮影</dd>
-                    <dt>担当範囲</dt>
-                    <dd>撮影・編集</dd>
-                    <dt>制作期間</dt>
-                    <dd>1日</dd>
-                    <!-- <dt>費用</dt>
-                    <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>フルサイズ一眼レフ<br>Lightroom</dd>
-                </dl>
-                <p>
-                    武家屋敷で内装の撮影をしました（自主制作）。
-                </p>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="photo_slider">
+                <div class="img_horizonal"><a href="images/view02_01@2x.png" data-lightbox="view01"><img
+                            src="images/view02_01@2x.png" alt="武家屋敷1"></a></div>
+                <div class="img_vertical"><a href="images/view02_02@2x.png" data-lightbox="view01"><img
+                            src="images/view02_02@2x.png" alt="武家屋敷2"></a></div>
+                <div class="img_horizonal"><a href="images/view02_03@2x.png" data-lightbox="view01"><img
+                            src="images/view02_03@2x.png" alt="武家屋敷3"></a></div>
+                <div class="img_horizonal"><a href="images/view02_04@2x.png" data-lightbox="view01"><img
+                            src="images/view02_04@2x.png" alt="武家屋敷4"></a></div>
+                <div class="img_vertical"><a href="images/view02_05@2x.png" data-lightbox="view01"><img
+                            src="images/view02_05@2x.png" alt="武家屋敷5"></a></div>
+                <div class="img_vertical"><a href="images/view02_06@2x.png" data-lightbox="view01"><img
+                            src="images/view02_06@2x.png" alt="武家屋敷6"></a></div>
             </div>
-            <h3>制作のポイント</h3>
-            <p>
-                夏障子の涼やかな雰囲気や武家屋敷と木漏れ日を撮るため、晴天の日の差し込む時間帯を選んで撮影しました。和のぬくもりや差し込む光を表現するため、暖色寄りでコントラストを高めに編集しています。
-            </p>
-        </section>
-    </article>
+            <section class="works_content">
+                <h2>武家屋敷（6枚）</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>内装撮影</dd>
+                        <dt>担当範囲</dt>
+                        <dd>撮影・編集</dd>
+                        <dt>制作期間</dt>
+                        <dd>1日</dd>
+                        <!-- <dt>費用</dt>
+                    <dd>テキスト</dd> -->
+                        <dt>ツール</dt>
+                        <dd>フルサイズ一眼レフ<br>Lightroom</dd>
+                    </dl>
+                    <p>
+                        武家屋敷で内装の撮影をしました（自主制作）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
+                <p>
+                    夏障子の涼やかな雰囲気や武家屋敷と木漏れ日を撮るため、晴天の日の差し込む時間帯を選んで撮影しました。和のぬくもりや差し込む光を表現するため、暖色寄りでコントラストを高めに編集しています。
+                </p>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -127,7 +128,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#view">一覧に<br>もどる</a>
         </div>
     </footer>
 
