--- a/works_photo/view_03.html
+++ b/works_photo/view_03.html
@@ -26,7 +26,7 @@
 
 <body class="lowerpage view_detail_03">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -66,53 +66,54 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="photo_slider">
-            <div class="img_horizonal"><a href="images/view03_01@2x.png" data-lightbox="view01"><img
-                        src="images/view03_01@2x.png" alt="古道具店1"></a></div>
-            <div class="img_vertical"><a href="images/view03_02@2x.png" data-lightbox="view01"><img
-                        src="images/view03_02@2x.png" alt="古道具店2"></a></div>
-            <div class="img_horizonal"><a href="images/view03_03@2x.png" data-lightbox="view01"><img
-                        src="images/view03_03@2x.png" alt="古道具店3"></a></div>
-            <div class="img_horizonal"><a href="images/view03_04@2x.png" data-lightbox="view01"><img
-                        src="images/view03_04@2x.png" alt="古道具店4"></a></div>
-            <div class="img_vertical"><a href="images/view03_05@2x.png" data-lightbox="view01"><img
-                        src="images/view03_05@2x.png" alt="古道具店5"></a></div>
-            <div class="img_vertical"><a href="images/view03_06@2x.png" data-lightbox="view01"><img
-                        src="images/view03_06@2x.png" alt="古道具店6"></a></div>
-            <div class="img_horizonal"><a href="images/view03_07@2x.png" data-lightbox="view01"><img
-                        src="images/view03_07@2x.png" alt="古道具店7"></a></div>
-            <div class="img_horizonal"><a href="images/view03_08@2x.png" data-lightbox="view01"><img
-                        src="images/view03_08@2x.png" alt="古道具店8"></a></div>
-        </div>
-        <section class="works_content">
-            <h2>古道具店（8枚）</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>内装撮影</dd>
-                    <dt>担当範囲</dt>
-                    <dd>撮影・編集</dd>
-                    <dt>制作期間</dt>
-                    <dd>1日</dd>
-                    <!-- <dt>費用</dt>
-                    <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>フルサイズ一眼レフ<br>Lightroom</dd>
-                </dl>
-                <p>
-                    古道具店で内装の撮影をしました（自主制作）。
-                </p>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="photo_slider">
+                <div class="img_horizonal"><a href="images/view03_01@2x.png" data-lightbox="view01"><img
+                            src="images/view03_01@2x.png" alt="古道具店1"></a></div>
+                <div class="img_vertical"><a href="images/view03_02@2x.png" data-lightbox="view01"><img
+                            src="images/view03_02@2x.png" alt="古道具店2"></a></div>
+                <div class="img_horizonal"><a href="images/view03_03@2x.png" data-lightbox="view01"><img
+                            src="images/view03_03@2x.png" alt="古道具店3"></a></div>
+                <div class="img_horizonal"><a href="images/view03_04@2x.png" data-lightbox="view01"><img
+                            src="images/view03_04@2x.png" alt="古道具店4"></a></div>
+                <div class="img_vertical"><a href="images/view03_05@2x.png" data-lightbox="view01"><img
+                            src="images/view03_05@2x.png" alt="古道具店5"></a></div>
+                <div class="img_vertical"><a href="images/view03_06@2x.png" data-lightbox="view01"><img
+                            src="images/view03_06@2x.png" alt="古道具店6"></a></div>
+                <div class="img_horizonal"><a href="images/view03_07@2x.png" data-lightbox="view01"><img
+                            src="images/view03_07@2x.png" alt="古道具店7"></a></div>
+                <div class="img_horizonal"><a href="images/view03_08@2x.png" data-lightbox="view01"><img
+                            src="images/view03_08@2x.png" alt="古道具店8"></a></div>
             </div>
-            <h3>制作のポイント</h3>
-            <p>
-                気になった古道具やお店での一コマを撮影しました。ビンテージ感を出すためにシャドウを濃く、フェードを強めにかけた編集をしました。
-            </p>
-        </section>
-    </article>
+            <section class="works_content">
+                <h2>古道具店（8枚）</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>内装撮影</dd>
+                        <dt>担当範囲</dt>
+                        <dd>撮影・編集</dd>
+                        <dt>制作期間</dt>
+                        <dd>1日</dd>
+                        <!-- <dt>費用</dt>
+                    <dd>テキスト</dd> -->
+                        <dt>ツール</dt>
+                        <dd>フルサイズ一眼レフ<br>Lightroom</dd>
+                    </dl>
+                    <p>
+                        古道具店で内装の撮影をしました（自主制作）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
+                <p>
+                    気になった古道具やお店での一コマを撮影しました。ビンテージ感を出すためにシャドウを濃く、フェードを強めにかけた編集をしました。
+                </p>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -131,7 +132,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#view">一覧に<br>もどる</a>
         </div>
     </footer>
 
