--- a/works_webdesign/banner_02.html
+++ b/works_webdesign/banner_02.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage banner_detail_02">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,39 +57,40 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/banner02_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>新規アプリ リリース広告</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>バナー広告</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン（模写）</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/banner02_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>新規アプリ リリース広告</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>バナー広告</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン（模写）</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator<br>Photoshop</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator<br>Photoshop</dd>
+                    </dl>
+                    <p>
+                        新たにリリースされるアプリの広告バナーを作成しました（架空案件）。<br>
+                        旅行に関する情報を紹介するトラベルメディアです。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    新たにリリースされるアプリの広告バナーを作成しました（架空案件）。<br>
-                    旅行に関する情報を紹介するトラベルメディアです。
+                    ロゴマークのオレンジをアクセントに、ダウンロードへの誘導を強調しました。<br>
+                    モックアップを活用し、二枚の写真をグラデーションを使って組み合わせて配置しました。また、太陽のあしらいや山嶺が広がる背景写真でも、トラベルメディアのワクワク感や非日常感を演出しています。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                ロゴマークのオレンジをアクセントに、ダウンロードへの誘導を強調しました。<br>
-                モックアップを活用し、二枚の写真をグラデーションを使って組み合わせて配置しました。また、太陽のあしらいや山嶺が広がる背景写真でも、トラベルメディアのワクワク感や非日常感を演出しています。
-            </p>
-            <div class="detail_img"><img src="images/banner02@2x-80.jpg" alt="バナー広告"></div>
-        </section>
-    </article>
+                <div class="detail_img"><img src="images/banner02@2x-80.jpg" alt="バナー広告"></div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -108,7 +109,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#banner">一覧に<br>もどる</a>
         </div>
     </footer>
 
