--- a/works_webdesign/banner_03.html
+++ b/works_webdesign/banner_03.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage banner_detail_03">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,39 +57,40 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/banner03_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>モバイルプラン セール広告</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>バナー広告</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン（模写）</dd>
-                    <dt>制作期間</dt>
-                    <dd>2日</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/banner03_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>モバイルプラン セール広告</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>バナー広告</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン（模写）</dd>
+                        <dt>制作期間</dt>
+                        <dd>2日</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator<br>Photoshop</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator<br>Photoshop</dd>
+                    </dl>
+                    <p>
+                        春限定の学割モバイルプランについて紹介するバナー広告を作成しました（架空案件）。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    春限定の学割モバイルプランについて紹介するバナー広告を作成しました（架空案件）。
+                    春らしいピンクをメインに、ロゴマークのグリーンを合わせて使用しました。<br>
+                    春の特別感を出すため「スプリングセール」の文字サイズを大きくしていますが、プラン内容に一番目がいくように、文字に透け感を出して配置しました。プラン内容は文字組を工夫し、情報を整理して見やすく工夫しています。<br>
+                    サービスがイメージしやすいよう、桜の形のあしらいや、スマホのモックアップを取り入れました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                春らしいピンクをメインに、ロゴマークのグリーンを合わせて使用しました。<br>
-                春の特別感を出すため「スプリングセール」の文字サイズを大きくしていますが、プラン内容に一番目がいくように、文字に透け感を出して配置しました。プラン内容は文字組を工夫し、情報を整理して見やすく工夫しています。<br>
-                サービスがイメージしやすいよう、桜の形のあしらいや、スマホのモックアップを取り入れました。
-            </p>
-            <div class="detail_img"><img src="images/banner03@2x-80.jpg" alt="バナー広告"></div>
-        </section>
-    </article>
+                <div class="detail_img"><img src="images/banner03@2x-80.jpg" alt="バナー広告"></div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -108,7 +109,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#banner">一覧に<br>もどる</a>
         </div>
     </footer>
 
