--- a/works_webdesign/index.html
+++ b/works_webdesign/index.html
@@ -20,7 +20,7 @@
 
 <body class="lowerpage list_web">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -40,7 +40,7 @@
                     <li><a href="../index.html#about">作者あとがき</a></li>
                 </ul>
             </nav>
-            <div class="sp_btn"><span></span></div>
+            <div class="sp_btn"><span id="btn_span"></span></div>
             <nav class="sp_nav">
                 <ul>
                     <li><a href="../index.html#concept">はじめに</a></li>
@@ -60,64 +60,66 @@
         </div>
     </header>
 
-    <section class="web_list">
-        <div class="list_wrap">
-            <div class="list_title">
-                <h2>ウェブ<br>　デザイン</h2>
-                <div class="pic_hand"><img src="images/list_web_top.svg" alt="パソコンを操る手"></div>
+    <main id="main" class="fade">
+        <section class="web_list">
+            <div class="list_wrap">
+                <div class="list_title">
+                    <h2>ウェブ<br>　デザイン</h2>
+                    <div class="pic_hand"><img src="images/list_web_top.svg" alt="パソコンを操る手"></div>
+                </div>
+                <div class="list_text">
+                    <p>
+                        デザインカンプの制作からコーディングまで対応しています。<br>
+                        お客様の世界観やイメージをデザインに落とし込み、課題を解決できるものをお作りします。
+                    </p>
+                    <ul>
+                        <li><a href="#website">Webサイト・コーディング</a></li>
+                        <li><a href="#banner">バナー広告</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="list_text">
-                <p>
-                    デザインカンプの制作からコーディングまで対応しています。<br>
-                    お客様の世界観やイメージをデザインに落とし込み、課題を解決できるものをお作りします。
-                </p>
-                <ul>
-                    <li><a href="#website">Webサイト・コーディング</a></li>
-                    <li><a href="#banner">バナー広告</a></li>
-                </ul>
-            </div>
-        </div>
-        <section id="website" class="list_content">
-            <h3>Webサイト・コーディング</h3>
-            <div class="list_slider">
-                <a href="web_01.html" class="list_slider_img">
-                    <img src="images/list_web_01@2x-80.jpg" alt="ポートフォリオサイト">
-                    <h4>ポートフォリオサイト</h4>
-                </a>
-                <a href="web_02.html" class="list_slider_img">
-                    <img src="images/list_web_02@2x-80.jpg" alt="美容室LP">
-                    <h4>美容室<br>ランディングページ</h4>
-                </a>
-                <a href="web_03.html" class="list_slider_img">
-                    <img src="images/list_web_03@2x-80.jpg" alt="喫茶店コーポレートサイト">
-                    <h4>カフェ<br>コーポレートサイト</h4>
-                </a>
-                <a href="web_04.html" class="list_slider_img">
-                    <img src="images/list_web_04@2x-80.jpg" alt="ワーキングスペースLP">
-                    <h4>ワーキングスペース<br>ランディングページ</h4>
-                </a>
-            </div>
+            <section id="website" class="list_content">
+                <h3>Webサイト・コーディング</h3>
+                <div class="list_slider">
+                    <a href="web_01.html" class="list_slider_img">
+                        <img src="images/list_web_01@2x-80.jpg" alt="ポートフォリオサイト">
+                        <h4>ポートフォリオサイト</h4>
+                    </a>
+                    <a href="web_02.html" class="list_slider_img">
+                        <img src="images/list_web_02@2x-80.jpg" alt="美容室LP">
+                        <h4>美容室<br>ランディングページ</h4>
+                    </a>
+                    <a href="web_03.html" class="list_slider_img">
+                        <img src="images/list_web_03@2x-80.jpg" alt="喫茶店コーポレートサイト">
+                        <h4>カフェ<br>コーポレートサイト</h4>
+                    </a>
+                    <a href="web_04.html" class="list_slider_img">
+                        <img src="images/list_web_04@2x-80.jpg" alt="ワーキングスペースLP">
+                        <h4>ワーキングスペース<br>ランディングページ</h4>
+                    </a>
+                </div>
+            </section>
+            <section id="banner" class="list_content">
+                <h3>バナー広告</h3>
+                <div class="list_slider">
+                    <a href="banner_01.html" class="list_slider_img">
+                        <img src="images/list_banner_01@2x-80.jpg" alt="新商品宣伝バナー">
+                        <h4>バーガーショップ<br>新商品広告ー</h4>
+                    </a>
+                    <a href="banner_02.html" class="list_slider_img">
+                        <img src="images/list_banner_02@2x-80.jpg" alt="リリース宣伝バナー">
+                        <h4>新規アプリ<br>リリース広告</h4>
+                    </a>
+                    <a href="banner_03.html" class="list_slider_img">
+                        <img src="images/list_banner_03@2x-80.jpg" alt="セール宣伝バナー">
+                        <h4>モバイルプラン<br>セール広告</h4>
+                    </a>
+                </div>
+            </section>
         </section>
-        <section id="banner" class="list_content">
-            <h3>バナー広告</h3>
-            <div class="list_slider">
-                <a href="banner_01.html" class="list_slider_img">
-                    <img src="images/list_banner_01@2x-80.jpg" alt="新商品宣伝バナー">
-                    <h4>バーガーショップ<br>新商品広告ー</h4>
-                </a>
-                <a href="banner_02.html" class="list_slider_img">
-                    <img src="images/list_banner_02@2x-80.jpg" alt="リリース宣伝バナー">
-                    <h4>新規アプリ<br>リリース広告</h4>
-                </a>
-                <a href="banner_03.html" class="list_slider_img">
-                    <img src="images/list_banner_03@2x-80.jpg" alt="セール宣伝バナー">
-                    <h4>モバイルプラン<br>セール広告</h4>
-                </a>
-            </div>
-        </section>
-    </section>
+    </main>
 
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
