--- a/works_webdesign/web_03.html
+++ b/works_webdesign/web_03.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage works_detail_03">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,41 +57,42 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/web03_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>カフェ コーポレートサイト</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>コーポレートサイト</dd>
-                    <dt>担当範囲</dt>
-                    <dd>コーディング</dd>
-                    <dt>制作期間</dt>
-                    <dd>2週間</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/web03_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>カフェ コーポレートサイト</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>コーポレートサイト</dd>
+                        <dt>担当範囲</dt>
+                        <dd>コーディング</dd>
+                        <dt>制作期間</dt>
+                        <dd>2週間</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>HTML・CSS・jQuery</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>HTML・CSS・jQuery</dd>
+                    </dl>
+                    <p>
+                        PC版・スマホ版のWebサイトをコーディングしました（架空案件）。<br>レスポンシブに対応し、jQueryで動きをつけています。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    PC版・スマホ版のWebサイトをコーディングしました（架空案件）。<br>レスポンシブに対応し、jQueryで動きをつけています。
+                    一つ一つのデザインに意図があることを意識し、デザインカンプを忠実に再現できるようコーディングしました。PCではウィンドウサイズを小さく変更することも考慮し、指定のサイズ以外でもデザインの印象が変わらないように微調整を加えています。<br>
+                    jQueryを用いて、メインビジュアルやギャラリーのスライダー、スマホ版のハンバーガーメニューに動きを実装しています。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                一つ一つのデザインに意図があることを意識し、デザインカンプを忠実に再現できるようコーディングしました。PCではウィンドウサイズを小さく変更することも考慮し、指定のサイズ以外でもデザインの印象が変わらないように微調整を加えています。<br>
-                jQueryを用いて、メインビジュアルやギャラリーのスライダー、スマホ版のハンバーガーメニューに動きを実装しています。
-            </p>
-            <div class="web_detail_img_wrap">
-                <div class="detail_img_pc"><img src="images/web03_cap_pc@2x-80.jpg" alt="カフェサイトPC版"></div>
-                <div class="detail_img_sp"><img src="images/web03_cap_sp@2x-80.jpg" alt="カフェサイトSP版"></div>
-            </div>
-        </section>
-    </article>
+                <div class="web_detail_img_wrap">
+                    <div class="detail_img_pc"><img src="images/web03_cap_pc@2x-80.jpg" alt="カフェサイトPC版"></div>
+                    <div class="detail_img_sp"><img src="images/web03_cap_sp@2x-80.jpg" alt="カフェサイトSP版"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -110,7 +111,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#website">一覧に<br>もどる</a>
         </div>
     </footer>
 
