--- a/works_webdesign/web_04.html
+++ b/works_webdesign/web_04.html
@@ -17,7 +17,7 @@
 
 <body class="lowerpage works_detail_04">
     <header id="header">
-        <div class="header_wrap">
+        <div id="header_wrap" class="header_wrap">
             <h1 class="pc_h1"><a href="../index.html">つむぐ。デザイン</a></h1>
             <h1 class="sp_h1"><a href="../index.html"><img src="../images/tsumugu_logo_sp.svg" alt="つむぐ。デザインロゴ"></a>
             </h1>
@@ -57,42 +57,43 @@
         </div>
     </header>
 
-    <article class="works_detail_wrap">
-        <div class="mock_img"><img src="images/web04_top@2x.png" alt="モックアップ"></div>
-        <section class="works_content">
-            <h2>ワーキングスペース ランディングページ</h2>
-            <div class="works_about">
-                <dl>
-                    <dt>カテゴリー</dt>
-                    <dd>ランディングページ</dd>
-                    <dt>担当範囲</dt>
-                    <dd>デザイン（模写）</dd>
-                    <dt>制作期間</dt>
-                    <dd>3日間</dd>
-                    <!-- <dt>費用</dt>
+    <main id="main" class="fadeUp">
+        <article class="works_detail_wrap">
+            <div class="mock_img"><img src="images/web04_top@2x.png" alt="モックアップ"></div>
+            <section class="works_content">
+                <h2>ワーキングスペース ランディングページ</h2>
+                <div class="works_about">
+                    <dl>
+                        <dt>カテゴリー</dt>
+                        <dd>ランディングページ</dd>
+                        <dt>担当範囲</dt>
+                        <dd>デザイン（模写）</dd>
+                        <dt>制作期間</dt>
+                        <dd>3日間</dd>
+                        <!-- <dt>費用</dt>
                     <dd>テキスト</dd> -->
-                    <dt>ツール</dt>
-                    <dd>Illustrator</dd>
-                </dl>
+                        <dt>ツール</dt>
+                        <dd>Illustrator</dd>
+                    </dl>
+                    <p>
+                        会員制コワーキングスペースのWebサイトを作成しました（架空案件）。<br>
+                        コンセプトやサービス内容について紹介するページです。
+                    </p>
+                </div>
+                <h3>制作のポイント</h3>
                 <p>
-                    会員制コワーキングスペースのWebサイトを作成しました（架空案件）。<br>
-                    コンセプトやサービス内容について紹介するページです。
+                    楽しさを伝えるイエローをベースカラーに、ブルーをアクセントカラーとして使用しています。<br>
+                    お客様のスペース利用につながるよう、「無料見学会予約」のボタンはアクセントカラーで強調しました。また、文章だけでなくアイコンイラストを使うことで、親しみやすい雰囲気を伝え、ぱっと見でも内容をイメージできるようにしました。
                 </p>
-            </div>
-            <h3>制作のポイント</h3>
-            <p>
-                楽しさを伝えるイエローをベースカラーに、ブルーをアクセントカラーとして使用しています。<br>
-                お客様のスペース利用につながるよう、「無料見学会予約」のボタンはアクセントカラーで強調しました。また、文章だけでなくアイコンイラストを使うことで、親しみやすい雰囲気を伝え、ぱっと見でも内容をイメージできるようにしました。
-            </p>
-            <div class="web_detail_img_wrap">
-                <div class="detail_img_pc"><img src="images/web04_cap_pc@2x-80.jpg" alt="カフェサイトPC版"></div>
-                <div class="detail_img_sp"><img src="images/web04_cap_sp@2x-80.jpg" alt="カフェサイトSP版"></div>
-            </div>
-        </section>
-    </article>
+                <div class="web_detail_img_wrap">
+                    <div class="detail_img_pc"><img src="images/web04_cap_pc@2x-80.jpg" alt="カフェサイトPC版"></div>
+                    <div class="detail_img_sp"><img src="images/web04_cap_sp@2x-80.jpg" alt="カフェサイトSP版"></div>
+                </div>
+            </section>
+        </article>
+    </main>
 
-
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
@@ -111,7 +112,7 @@
         </ul>
         <p>&copy; 2023 Tsumugu. Design all right reserved.</p>
         <div class="pagetop">
-            <a href="index.html">一覧に<br>もどる</a>
+            <a href="index.html#website">一覧に<br>もどる</a>
         </div>
     </footer>
 
