--- a/works_illustration/color_01.html
+++ b/works_illustration/color_01.html
@@ -92,7 +92,7 @@
         </article>
     </main>
 
-    <footer class="footer_wrap">
+    <footer id="footer" class="footer_wrap">
         <div class="footer_logo"><a href="../index.html"><img src="../images/tsumugu_logo.svg" alt="つむぐ。デザインロゴ"></a>
         </div>
         <ul>
